# holyspirit

./: CMakeLists.txt  README  configuration.conf  configuration.txt  credits.txt  key_mapping.conf
3dparty/MinGW/: README
3dparty/SFML/: README
Autres/: Ant's Nation.odt  Crédits.odt  Description bestiaire.odt  GC HnS Plateforme2.docx  GC Zombiecity.docx  GC Zombiecity2.docx  Game Design Document.odt  Idées RPG.odt  Idées ZOMBIES.odt  Idées ZOMBIES2.odt  Vinci's Tribute GDD.odt
Autres/db/: uuid
Data/Effets/: EffetNoir.sfx
Data/Maps/: Maps.rs.hs  evenement2.txt  map0.txt  map2.txt
Data/Miscs/: Items.rs.hs
Data/Musics/: Cave.conf
Dessins/: Equipement 1.psd  char_hero_inquisit_effets 3.psd  inquisiteur - colo2.psd  inquisiteur - colo3.psd  inquisiteur - colo4.psd  inquisiteur - colo5.psd  pistolerobar.psd  taverne by gregouar.max  taverne.max
EmpireOfSteam/Articles/: Article programmation et GDD par gregouar.docx  Histoire d'empire of steam par bravach V1.odt  Histoire d'empire of steam par vymdiesel V1.odt  (+1 more)
HolyEditor/: HolyEditor.cbp  HolyEditor.depend  HolyEditor.layout  HolyEditor.pro  MainWindow.cpp  MainWindow.h  MainWindow.moc  Makefile  Makefile.Debug  Makefile.Release  QSFMLCanvas.cpp  QSFMLCanvas.h  configuration.cpp  configuration.h  constantes.h  highlighter.cpp  highlighter.moc  main.cpp  object_script.HolyEditor.Debug  object_script.HolyEditor.Release  singleton.h
Holyspirit/: Holyspirit  Holyspirit_Linux  LINUX_Installation  Launch_Holyspirit_Linux  Log.txt  Ne_me_lisez_pas!.txt  README Install for Linux  Thumbs.db  configuration.conf  credits.txt  fulldebuglog.txt  gdbcom  gmon.out  holyspirit.ini  hslauncher_es.qm  install.sh  key_mapping.conf  liste_langages.conf  liste_resolution.conf  maj.txt  patch.txt
Holyspirit2/: Log.txt  configuration.conf
Holyspirit3/: Log.txt  holyspirit.ini  liste_resolution.conf
HolyspiritJE/: Log.txt  configuration.conf  credits.txt  holyspirit.ini  key_mapping.conf
Holyspirit_Demo/: Log.txt  configuration.conf  credits.txt  holyspirit.ini
Launcher/: Holyspirit Launcher.cbp  Holyspirit Launcher.layout  Launcher.cpp  Launcher.h  LauncherHolyspirit.pro  Makefile  Makefile.Debug  Makefile.Release  configuration.conf  configuration.cpp  configuration.h  defines.h  hslauncher_en.qm  hslauncher_en.ts  hslauncher_esp.ts  hslauncher_fr.qm  hslauncher_fr.ts  liste_langages.conf  main.cpp  moc_Launcher.cpp  moc_configuration.cpp  optionsjeu.cpp  optionsjeu.h
Modélisations/: CO0BB6~02.MAX  CO0BB6~03.MAX  courtisane 1.0 + vetements05.max  courtisane 1.0 + vetements06.max  courtisane 1.0 + vetements08.max  courtisane1.3ds  temple grec (dorique).mb
Screenshots/: Thumbs.db
Source/: CDN.workspace  CMakeLists.txt  ChargThread.cpp  ChargThread.h  Commande.h  Contexte.cpp  Contexte.h  Decor.cpp  Decor.h  Evenement.cpp  Evenement.h  Globale.h  Hero.cpp  Hero.h  Holyspirit.cbp  Holyspirit.depend  Holyspirit.layout  Le chemin de la Dam'nation.depend  Le chemin de la Dam'nation.layout  Licence.txt  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Map.cpp  Map.h  ModeleMoteurParticule.h  Monstre.cpp  Monstre.h  MoteurGraphique.cpp  MoteurGraphique.h  Objet.cpp  Objet.h  Personnage - Copie.cpp  Personnage.cpp  Personnage.h  Pose.cpp  Pose.h  README  Thumbs.db  (+87 more)
Source/.objs/: ressource.res
Source/Contextes/: c_Jeu.cpp  c_Jeu.h  c_bless.cpp  c_bless.h  c_changementMap.cpp  c_changementMap.h  c_craft.cpp  c_craft.h  c_demarrage.cpp  c_demarrage.h  c_documents.cpp  c_documents.h  c_inventaire.cpp  c_inventaire.h  c_jeu.cpp  c_jeu.h  c_mainMenu.cpp  c_mainMenu.h  c_menuInGame.cpp  c_menuInGame.h  c_miracles.cpp  c_miracles.h  c_potales.cpp  c_potales.h  c_quetes.cpp  c_quetes.h  contexte.cpp  contexte.h
Source/Entites/: case.cpp  case.h  classe.cpp  classe.h  hero.cpp  hero.h  liste_case.cpp  liste_case.h  miracle.cpp  miracle.h  monstre.cpp  monstre.h  objet.cpp  objet.h  personnage.cpp  personnage.h  pose.cpp  pose.h  quete.cpp  quete.h  script.cpp  script.h
Source/Map/: Climate.cpp  Climate.h  decor.cpp  decor.h  evenement.cpp  evenement.h  map.cpp  map.h  map_charger.cpp  map_miracles.cpp  map_scripts.cpp  tile.cpp  tile.h  tileset.cpp  tileset.h
Source/Moteurs/: Entite_graphique.cpp  Entite_graphique.h  console.H  console.cpp  console.h  eventManager.cpp  eventManager.h  label.cpp  light.cpp  light.h  lightManager.cpp  lightManager.h  modeleMoteurParticule.cpp  modeleMoteurParticule.h  moteurGraphique.cpp  moteurGraphique.h  moteurParticule.cpp  moteurParticule.h  moteurSons.cpp  moteurSons.h  typo.cpp  typo.h
Source/Network/: network.cpp  receive_client.cpp  receive_host.cpp  send.cpp
Source/cmake_modules/: FindGNUWIN.cmake
SourceM/: Holyspirit.cbp  Holyspirit.depend  Holyspirit.layout  configuration.cpp  configuration.h  constantes.h  datFile.cpp  globale.h  jeu.cpp  jeu.h  jeu_network.cpp  main.cpp  menu.cpp  video.cpp
SourceNewApi/: Holyspirit.cbp  Holyspirit.depend  jeu.cpp  jeu.h  singleton.h
distribution/: Holyspirit.desktop.in
trunk/: CMakeLists.txt  configuration.conf  holyspirit.ini
trunk/Source/: CMakeLists.txt  README  configuration.cpp  configuration.h  constantes.h  datFile.cpp  globale.h  jeu.cpp  main.cpp  menu.cpp  menu.h  sfml.cpp  video.cpp
trunk/Source/Contextes/: c_bless.cpp  c_changementMap.cpp  c_demarrage.cpp  c_documents.cpp  c_inventaire.cpp  c_inventaire.h  c_jeu.cpp  c_jeu.h  c_mainMenu.cpp  c_mainMenu.h  c_menuInGame.cpp  c_miracles.cpp  c_quetes.cpp
trunk/Source/Entites/: case.h  classe.cpp  classe.h  hero.cpp  hero.h  miracle.cpp  monstre.cpp  monstre.h  objet.cpp  personnage.cpp  personnage.h  quete.cpp  script.h
trunk/Source/Map/: decor.cpp  map.cpp  map.h  map_charger.cpp  map_miracles.cpp  map_scripts.cpp  tileset.cpp
trunk/Source/Moteurs/: Entite_graphique.cpp  Entite_graphique.h  console.cpp  console.h  eventManager.cpp  label.cpp  label.h  light.cpp  lightManager.cpp  moteurGraphique.cpp  moteurGraphique.h  moteurParticule.cpp  moteurSons.cpp  typo.cpp  typo.h
trunk/Source/Network/: network.cpp  network.h  receive_client.cpp  receive_host.cpp
(+2253 files in other folders)
